[gd_scene load_steps=12 format=3 uid="uid://hbjrfoyoqjtd"]

[ext_resource type="Texture2D" uid="uid://b84of85fn1ip1" path="res://kirbySprites/enemy/pompey.png" id="1_qp4fc"]
[ext_resource type="Script" path="res://enemy scenes/1abilityenemiees/pompey/pompey.gd" id="1_tfv53"]
[ext_resource type="PackedScene" uid="uid://ceok40kuf7ubl" path="res://enemy scenes/1abilityenemiees/pompey/magmarock.tscn" id="2_7s4el"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3v7ow"]
size = Vector2(18, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yeo1x"]
size = Vector2(148, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yayx"]
atlas = ExtResource("1_qp4fc")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qawg3"]
atlas = ExtResource("1_qp4fc")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0epox"]
atlas = ExtResource("1_qp4fc")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_46ch0"]
atlas = ExtResource("1_qp4fc")
region = Rect2(80, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a04m"]
atlas = ExtResource("1_qp4fc")
region = Rect2(60, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_yfhaf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yayx")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_qawg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0epox")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_qawg3")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_46ch0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a04m")
}],
"loop": false,
"name": &"fire",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a04m")
}],
"loop": false,
"name": &"hot",
"speed": 5.0
}]

[node name="pompey" type="CharacterBody2D" groups=["mobs", "suckable"]]
collision_layer = 2
floor_constant_speed = true
floor_max_angle = 0.0
floor_snap_length = 5.0
script = ExtResource("1_tfv53")
magmarock = ExtResource("2_7s4el")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_3v7ow")

[node name="playerDetect" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetect"]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_yeo1x")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="cooloffTime" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_yfhaf")
animation = &"fire"
autoplay = "default"

[connection signal="body_entered" from="playerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="cooloffTime" to="." method="_on_cooloff_time_timeout"]
